# harbor-preindex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
harbor_preindex/: __init__.py  __main__.py  cli.py  logging_config.py  main.py  settings.py
harbor_preindex/crawler/: __init__.py  scanner.py
harbor_preindex/decision/: __init__.py  engine.py
harbor_preindex/embedding/: __init__.py  base.py  ollama.py
harbor_preindex/llm/: __init__.py  base.py  ollama.py
harbor_preindex/profiling/: __init__.py  builder.py  extraction.py  folder_semantics.py
harbor_preindex/retrieval/: __init__.py  batch_planner.py  cards.py  core.py  folder_semantics.py  query_hints.py  service.py
harbor_preindex/schemas/: __init__.py  models.py
harbor_preindex/semantic/: __init__.py  base.py  code.py  document.py  models.py  registry.py
harbor_preindex/signals/: __init__.py  base.py  document.py  models.py  registry.py
harbor_preindex/storage/: __init__.py  file_store.py  qdrant_store.py  sqlite_store.py
harbor_preindex/utils/: fs.py  iterables.py  ollama_api.py  qdrant_ids.py  text.py
scripts/: build-index.sh  harbor-preindex-build-index.service.example  health-check.sh  query-file.sh  query.sh
tests/: test_batch_query.py  test_content_extraction.py  test_feedback.py  test_folder_semantics.py  test_main_build_index.py  test_query_hints.py  test_retrieval_cards.py  test_retrieval_core.py  test_semantic_enrichment.py
tests/fixtures/storage-root/admin/cv/: Raphael_Dok_CV.txt
tests/fixtures/storage-root/admin/factures/: ESP8266amazon.txt  amazon_invoice_2025.txt
(+2 files in other folders)
