[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harbor-preindex"
version = "0.1.0"
description = "MVP CLI for pre-indexing cold NAS project folders into local Qdrant for Harbor."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "dok" }]
dependencies = [
  "cryptography>=43,<46",
  "httpx>=0.27,<1.0",
  "pypdf>=4.2,<6.0",
  "python-dotenv>=1.0,<2.0",
  "qdrant-client>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
harbor-preindex = "harbor_preindex.cli:main"

[tool.setuptools.packages.find]
include = ["harbor_preindex*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
exclude = ["^data/"]
